crux-mir-comp/test/symb_eval/comp/spec_tuple.good
test spec_tuple/<DISAMB>::f_test[0]: ok
test spec_tuple/<DISAMB>::use_f[0]: FAILED

failures:

---- spec_tuple/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/comp/spec_tuple.rs:55:5: 55:29: error: in spec_tuple/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/spec_tuple.rs:55:5:
[Crux]   	d < 10

[Crux] Overall status: Invalid.
